[#805] Fixed margin truncated on top of list

--- a/Dashboard/app/css/main.scss
+++ b/Dashboard/app/css/main.scss
@@ -614,14 +614,13 @@ label[for=newDeviceGroupName] {
 }
 .middleSection {
     margin: 0 0 20px 0;
+    padding:30px 0 0 0;
 }
 .leftSidebar {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     left: 0;
-    /*margin-left: -20em;
-    margin-top: -30px;*/
     top:112px;
     bottom:56px;
     position: fixed;
